--- a/OtterServer_WebAuthN/otter-coauth/templates/security_keys.html
+++ b/OtterServer_WebAuthN/otter-coauth/templates/security_keys.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h2>Security Keys</h2>
   {% if current_user.keys != [] %}
-    <table class="table table-hover align-middle" style="width: auto;">
+    <table class="table table-hover align-middle" style="width: auto; color: white;">
       <thead>
         <tr>
           <th>Name</th>
