--- a/OtterServer_WebAuthN/otter-coauth/templates/index.html
+++ b/OtterServer_WebAuthN/otter-coauth/templates/index.html
@@ -5,6 +5,7 @@
   {% else %}
 <div style="text-align: center;">
     <h2>You may now close this window.</h2>
+    <h5>To keep your generated password from disappearing, click on the extension! This window will automatically close in 10 seconds.</h5>
 </div>
 <script>
     navigator.clipboard.writeText(document.getElementById("ps").innerHTML);
