--- a/OtterCoGen-L/main.css
+++ b/OtterCoGen-L/main.css
@@ -14,7 +14,7 @@
     --color-purple: #302438;
     --color-white: #FFFFFF;
     --color-orange: #EFB158;
-    --color-dark-purple: #2e1d38;
+    --color-dark-purple: #1B141F;
 }
 
 header {
